--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
               <a href="https://steamcommunity.com/id/wesselgame" target="_blank"><i class="fab fa-steam-square fa-3x"></i></a>
               <a href="https://twitter.com/wessel_tip" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a>
               <br />
+              <a class="btn" href="https://github.com/PassTheWessel/yorushika" target="_blank">Yorushika</a>
           </div>
         </div>
         <div class="col-xs-6 left">
@@ -100,9 +101,11 @@
         </div>
       <div class="row">
         <div class="col-xs-12 projects left">
-          <a href="https://github.com/PassTheWessel/yorushika" target="_blank" class="emerald"><i class="emoji repo"></i>Yorushika</a> - A multi-platform bot, written in Node.JS</ul><br />
-          <a href="https://github.com/wumpusapp/wumpfetch" target="_blank" class="emerald"><i class="emoji repo"></i>Wumpfetch</a> - A lightweight and fast HTTP client, written in Node.JS</ul><br />
-          <a href="https://qtradio.moe/" target="_blank" class="emerald"><i class="emoji repo-force-push"></i>QTradio.moe</a> - A radio service, founded by <a href="https://derpyenterprises.org/">ohlookitsderpy</a></ul>        
+          <a href="https://github.com/PassTheWessel/yorushika" target="_blank" class="emerald"><i class="emoji repo"></i>&nbsp;Yorushika</a> - A multi-platform bot, written in Node.JS</ul><br />
+          <a href="https://github.com/PassTheWessel/snowflakey" target="_blank" class="emerald"><i class="emoji repo"></i>&nbsp;snowflakey</a> - Snowflake generation and lookup, written in Node.JS</ul><br />
+          <a href="https://github.com/wumpusapp/wumpfetch" target="_blank" class="emerald"><i class="emoji repo"></i>&nbsp;Wumpfetch</a> - A lightweight and fast HTTP client, written in Node.JS</ul><br />
+          <br />
+          <a href="https://qtradio.moe/" target="_blank" class="emerald"><i class="emoji repo-force-push"></i>&nbsp;QTradio.moe</a> - A radio service, founded by <a href="https://derpyenterprises.org/">ohlookitsderpy</a></ul>        
         </div>
       </div>
     </div>
