Big changes and many fixes

--- a/index.html
+++ b/index.html
@@ -8,45 +8,40 @@
 |    \_/\_/ \___||___/___/\___|_|\__, |\__,_|_| |_| |_|\___|  |
 |                                 __/ |                       |
 |                                |___/                        |
-| This code is made by Wesselgame and it's licensed under the |
+| This code is made by Wesselgame and is licensed under the   |
 | MIT license ( https://opensource.org/licenses/MIT )         |
 |                                                             |
-| GitHub: https://github.com/PassTheWessel                    |
+| GitHub: https://github.com/PassTheWessel/wessel.meek.moe    |
 \*-----------------------------------------------------------*/
 -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     
-    <title>Wessel Tip</title>
+    <title>Wesselgame</title>
     <meta name="theme-color" content="#80BD01" />
-    <meta property="og:title" content="Wessel Tip" />
+    <meta property="og:title" content="Wesselgame" />
     <meta property="og:type" content="website" />
     <link rel="SHORTCUT ICON" href="static/img/favicon.ico">
     <meta property="og:url" content="http://wessel.meek.moe/" />
-    <meta name="KEYWORDS" content="wessel, open source, github" />
-    <meta property="og:image" content="http://wessel.meek.moe/static/img/logo.jpg" />
+    <meta name="KEYWORDS" content="wessel, open source, github, discord, sass, brainfuck, html, css" />
+    <meta property="og:image" content="http://wessel.meek.moe/static/img/logo.webp" />
     <meta name="DESCRIPTION" content="A random full stack developer from the Netherlands" />
     <meta property="og:description" content="A random full stack developer from the Netherlands" />
 
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/mfizz.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/emoji.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/fonts.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/all.css">
     
     <script src="static/js/jquery.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/loader.min.js" type="module"></script>
   </head>
   <body>
-    <div class="container center main_slide" style="min-width: 655px; max-width: 630px; width: auto; margin-top: 60px; margin-bottom: 150px; background: rgba(0,0,0,.1);">
+  <div class="container center main_slide content">
       <div class="row">
         <div class="col-xs-6">
-          <img class="logo" src="static/img/logo.svg">
+          <img class="logo" src="static/img/logo.webp" width="200" height="200">
           <div class="icon_set unselectable" style="position: relative; z-index: 2;">
               <a href="https://twitch.tv/wesselgame" target="_blank"><i class="fab fa-twitch fa-3x"></i></a> 
               <a href="https://last.fm/user/wesselgame" target="_blank"><i class="fab fa-lastfm fa-3x"></i></a>
@@ -60,10 +55,10 @@
           </div>
         </div>
         <div class="col-xs-6 left">
-          <h3>Wessel Tip</h3>
+          <h3>Wesselgame</h3>
           <span style="color: #c9c9c9">
               Hello, my name is <span class="emerald">Wessel</span> (Also known as <span class="emerald">Wesselgame</span> or <span class="emerald">PassTheWessel</span> on the internet).
-              I've made, localized and contributed to many projects, some of them are <a href="https://github.com/PassTheWessel/yorushika">Yorushika</a> and <a href="https://github.com/wumpusapp/wumpfetch">Wumpfetch</a>.
+              I'm a full stack developer from the Netherlands and I've made, localized and contributed to many projects, some of them are <a href="https://github.com/PassTheWessel/yorushika">Yorushika</a> and <a href="https://github.com/wumpusapp/wumpfetch">Wumpfetch</a>.
               I've been coding for around <span class="sun">5 years</span> and i still learn a lot every day.
           </span>
         </div>
@@ -111,7 +106,7 @@
     </div>
     <br /><br /><br /><br />
 
-    <footer>Site made with <span style="color: #551A8B">&lt;3</span> by <a href="https://github.com/PassTheWessel">Wesselgame</a> | Source code on <a href="https://github.com/PassTheWessel/wessel.meek.moe">GitHub</a></footer>
+    <footer class="footer">Site made with <span style="color: #551A8B">&lt;3</span> by <a href="https://github.com/PassTheWessel">Wesselgame</a> | Source code on <a href="https://github.com/PassTheWessel/wessel.meek.moe">GitHub</a></footer>
     <script src="static/js/main.min.js"></script>
   </body>
 </html>
