--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="col-xs-6 left">
-          <h3>Wesselgame</h3>
+          <h1 style="font-size: 25px;">Wesselgame</h1>
           <span style="color: #c9c9c9">
               Hello, my name is <span class="emerald">Wessel</span> (Also known as <span class="emerald">Wesselgame</span> or <span class="emerald">PassTheWessel</span> on the internet).
               I'm a full stack developer from the Netherlands and I've made, localized and contributed to many projects, some of them are <a href="https://github.com/PassTheWessel/yorushika">Yorushika</a> and <a href="https://github.com/wumpusapp/wumpfetch">Wumpfetch</a>.
