--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="container center main_slide content">
       <div class="row">
         <div class="col-xs-6">
-          <img class="logo" src="static/img/logo.webp" width="200" height="200">
+          <img class="logo" src="static/img/logo.webp">
           <div class="icon_set unselectable" style="position: relative; z-index: 2;">
               <a href="https://twitch.tv/wesselgame" target="_blank"><i class="fab fa-twitch fa-3x"></i></a> 
               <a href="https://last.fm/user/wesselgame" target="_blank"><i class="fab fa-lastfm fa-3x"></i></a>
