--- a/index.html
+++ b/index.html
@@ -22,17 +22,26 @@
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     
     <title>Wesselgame</title>
-    <meta name="theme-color" content="#80BD01" />
-    <meta property="og:title" content="Wesselgame" />
-    <meta property="og:type" content="website" />
-    <link rel="SHORTCUT ICON" href="static/img/favicon.ico">
     <meta property="og:url" content="http://wessel.meek.moe/" />
-    <meta name="KEYWORDS" content="wessel, open source, github, discord, sass, brainfuck, html, css" />
-    <meta property="og:image" content="http://wessel.meek.moe/static/img/logo.webp" />
-    <meta name="DESCRIPTION" content="A random full stack developer from the Netherlands" />
+    <meta name="theme-color" content="#80BD01" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Wesselgame" />
+    <meta property="og:image" content="https://wessel.meek.moe/static/img/logo.gif" />
+    <meta property="og:locale" content="en_us">
+    <meta property="og:site_name" content="Wesselgame">
     <meta property="og:description" content="A random full stack developer from the Netherlands" />
+    <link rel="SHORTCUT ICON" href="static/img/favicon.ico">
+    <meta name="KEYWORDS" content="wessel, open source, github, discord, sass, brainfuck, html, css" />
+    <meta name="DESCRIPTION" content="A random full stack developer from the Netherlands" />
+
+    <meta property="twitter:url" content="https://wessel.meek.moe/">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Wesselgame">
+    <meta property="twitter:image" content="https://wessel.meek.moe/static/img/logo.gif">
+    <meta property="twitter:description" content="A random full stack developer from the Netherlands">
 
     <link rel="stylesheet" type="text/css" href="static/css/all.css">
+    <link rel="stylesheet" type="text/css" href="static/css/main.css">
     
     <script src="static/js/jquery.js"></script>
     <script src="static/js/bootstrap.js"></script>
@@ -46,7 +55,7 @@
       <div class="row">
         <div class="col-xs-6">
           <img class="logo" src="static/img/logo.webp">
-          <div class="icon_set unselectable" style="position: relative; z-index: 2;">
+          <div class="icon_set unselectable">
               <a href="https://twitch.tv/wesselgame" target="_blank"><i class="fab fa-twitch fa-3x"></i></a> 
               <a href="https://last.fm/user/wesselgame" target="_blank"><i class="fab fa-lastfm fa-3x"></i></a>
               <a href="mailto:discord@go2it.eu" target="_blank"><i class="far fa-envelope fa-3x"></i></a>
@@ -100,16 +109,16 @@
         </div>
       <div class="row">
         <div class="col-xs-12 projects left">
-          <a href="https://github.com/PassTheWessel/yorushika" target="_blank" class="emerald"><i class="emoji repo"></i>&nbsp;Yorushika</a> - A multi-platform bot, written in Node.JS</ul><br />
-          <a href="https://github.com/PassTheWessel/snowflakey" target="_blank" class="emerald"><i class="emoji repo"></i>&nbsp;snowflakey</a> - Snowflake generation and lookup, written in Node.JS</ul><br />
-          <a href="https://github.com/wumpusapp/wumpfetch" target="_blank" class="emerald"><i class="emoji repo"></i>&nbsp;Wumpfetch</a> - A lightweight and fast HTTP client, written in Node.JS</ul><br />
+          <a href="https://github.com/PassTheWessel/yorushika" target="_blank" class="emerald">&nbsp;Yorushika</a> - A multi-platform bot, written in Node.JS</ul><br />
+          <a href="https://github.com/PassTheWessel/snowflakey" target="_blank" class="emerald">&nbsp;snowflakey</a> - Snowflake generation and lookup, written in Node.JS</ul><br />
+          <a href="https://github.com/wumpusapp/wumpfetch" target="_blank" class="emerald">&nbsp;Wumpfetch</a> - A lightweight and fast HTTP client, written in Node.JS</ul><br />
           <br />
-          <a href="https://qtradio.moe/" target="_blank" class="emerald"><i class="emoji repo-force-push"></i>&nbsp;QTradio.moe</a> - A radio service, founded by <a href="https://derpyenterprises.org/">ohlookitsderpy</a></ul>        
+          <a href="https://qtradio.moe/" target="_blank" class="emerald">&nbsp;QTradio.moe</a> - A radio service, founded by <a href="https://derpyenterprises.org/">ohlookitsderpy</a></ul>        
         </div>
       </div>
     </div>
-    <br /><br /><br /><br />
+    <br /><br />
 
-    <footer class="footer">Site made with <span style="color: #551A8B">&lt;3</span> by <a href="https://github.com/PassTheWessel">Wesselgame</a> | Source code on <a href="https://github.com/PassTheWessel/wessel.meek.moe">GitHub</a></footer>
+    <footer class="footer small">Site made with <span class="purple">&lt;3</span> by <a href="https://github.com/PassTheWessel">Wesselgame</a> | Source code on <a href="https://github.com/PassTheWessel/wessel.meek.moe">GitHub</a></footer>
   </body>
 </html>
